@@ -21,6 +21,8 @@ Extension Modules
 Library
 -------
 
+- the filecmp module no longer uses the deprecated use_statcache argument.
+
 - unittest.TestCase.run() and unittest.TestSuite.run() can now be successfully
   extended or overridden by subclasses.  Formerly, the subclassed method would
   be ignored by the rest of the module.  (Bug #1078905).
